<resources>
    <string name="app_name">Partyzing</string>
    <string name="headline">HeadLine</string>
    <string name="headtag">Party Planner</string>
    <string name="supportiveLine">SupportiveLine</string>
    <string name="facebook_app_id">1705663433020545</string>
    <string name="occasion">What is the Occasion for Party?</string>
    <string name="partyTheme">What is the theme for party?</string>
    <string name="products">Order party products to bring zing in the party</string>
    <string name="skip">Skip</string>
    <string name="connectivity_error">Some Problem Connecting to facebook</string>
    <string name="zero">0</string>
</resources>
