...
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/fourty"
    android:orientation="vertical"
    tools:context=".View.MainActivity">

    <FrameLayout
        android:id="@+id/flcontainer_one"
        android:layout_width="@dimen/framelayout_viewpager_size"
        android:layout_height="@dimen/framelayout_viewpager_size"
        android:layout_marginLeft="@dimen/ten">

        <ImageView
            android:id="@+id/image_one"
...
