<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/twentyfive"
        android:paddingRight="@dimen/twentyfive"
        android:paddingTop="@dimen/twentyfive"
        tools:context=".View.MainActivity">

        <RelativeLayout
            android:id="@+id/rl_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixtyfive"
            android:layout_marginLeft="@dimen/ten">

            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/sixtyfive"
                android:layout_height="@dimen/sixtyfive"
                android:src="@drawable/partyzing" />

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/skip" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_container"
            android:layout_marginLeft="@dimen/ten"
            android:text="@string/products"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/thirty" />

        <android.support.v4.view.ViewPager
            android:id="@+id/view_Pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_marginTop="@dimen/fifteen" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/price"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/fiftyfive"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingBottom="@dimen/ten"
            android:paddingLeft="@dimen/twentyfive"
            android:paddingTop="@dimen/ten"
            android:textColor="@color/white"
            android:textSize="@dimen/thirty"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/next"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/fiftyfive"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingBottom="@dimen/ten"
            android:paddingRight="@dimen/twentyfive"
            android:paddingTop="@dimen/ten"
            android:text="Next"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/thirty"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>